--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-lg-6 col-md-6 project-container">
                 <h5>Weather API</h5>
-                <img src="images/weather.png" alt="weather-img" class="weather-img">
+                <img src="images/weatherapp.png" alt="weather-img" class="weather-img">
                 <hr>
                 <p>My first project with ReactJS. Here I worked with the Weather API by using async Javascript and I also familiarized myself with components, props and hooks like useState and useEffect. </p>
                 <a href="https://woolalal.github.io/weatherapp/" target="_blank"><button class="livewebsite-btn">Website</button></a>
