--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                 <a href="https://woolalal.github.io/weatherapp/" target="_blank"><button class="livewebsite-btn">Website</button></a>
                 <a href="https://github.com/woolalal/weatherapp" target="_blank"><button class="github-btn">Github</button></a>  
             </div>
+            <div class="col-lg-6 col-md-6 project-container">
+                <h5>Food Recipe API</h5>
+                <img src="images/foodrecipe.png" alt="foodrecipe-img" class="foodrecipe-img">
+                <hr>
+                <p>Another React project. Familiarizing myself more with components, hooks, ternary operator and also using of mapping function for data. Did not focus much on the CSS aspect in this website as I wanted to focus more on React.</p>
+                <a href="https://woolalal.github.io/foodrecipe/" target="_blank"><button class="livewebsite-btn">Website</button></a>
+                <a href="https://github.com/woolalal/foodrecipe/tree/master" target="_blank"><button class="github-btn">Github</button></a>  
+            </div>
+
         </div>
     </section>
     <hr class="seperator">
