added BMI calculator

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 <a href="https://github.com/woolalal/rps" target="_blank"><button class="github-btn">Github</button></a>  
             </div>
             <div class="col-lg-6 col-md-6 project-container">
+                <h5>BMI Calculator</h5>
+                <img src="images/bmicalculator.png" alt="bmicalculator-img" class="bmicalculator-img">
+                <hr>
+                <p>A really simple page that I did for my final year project. Here I dabbled with DOM manipulation and as well as if else statements to differentiate the various outputs possible from the BMI calculated. Just a really simple page, but I had a lot of fun with implementing it.</p>
+                <a href="https://woolalal.github.io/bmicalculator/" target="_blank"><button class="livewebsite-btn">Website</button></a>
+                <a href="https://github.com/woolalal/bmicalculator" target="_blank"><button class="github-btn">Github</button></a>  
+            </div>
+            <div class="col-lg-6 col-md-6 project-container">
                 <h5>Weather API</h5>
                 <img src="images/weatherapp.png" alt="weather-img" class="weather-img">
                 <hr>
