--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                 <a href="https://woolalal.github.io/foodrecipe/" target="_blank"><button class="livewebsite-btn">Website</button></a>
                 <a href="https://github.com/woolalal/foodrecipe/tree/master" target="_blank"><button class="github-btn">Github</button></a>  
             </div>
+            <div class="col-lg-6 col-md-6 project-container">
+                <h5>Popcorn</h5>
+                <img src="images/movieapp2.png" alt="movieapp-img" class="movieapp-img">
+                <hr>
+                <p>My first project with VueJS. Here I was trying to gain some exposure to the framework, and I worked with things like computed properties, event handling, passing props, routing, and Axios library for API calls. Works best on Chrome's browser for both mobile and laptop.</p>
+                <a href="https://woolalal.github.io/movie-app/" target="_blank"><button class="livewebsite-btn">Website</button></a>
+                <a href="https://github.com/woolalal/movie-app" target="_blank"><button class="github-btn">Github</button></a>  
+            </div>
 
         </div>
     </section>
@@ -86,7 +94,7 @@
             <img src="images/programmer.png" alt="programmer-img" class="programmer-img">  
             <ul>
                 <li>HTML5, CSS3, Bootstrap, Javascript, Node, ExpressJS, PHP, Java</li>
-                <li>Javascript library such as ReactJs</li>
+                <li>Javascript library such as ReactJs, VueJS</li>
                 <li>Working with database such as MySQL</li>
                 <li>Networking and troubleshooting skills</li>
                 <li>English and basic Chinese</li>
