comment out rps/bmi & update info

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://github.com/woolalal/todolist" target="_blank"><button class="github-btn">Github</button></a>
                 
             </div>
-            <div class="col-lg-6 col-md-6 project-container">
+            <!-- <div class="col-lg-6 col-md-6 project-container">
                 <h5>Rock Paper Scissors</h5>
                 <img src="images/rps.png" alt="rps-img" class="rps-img">
                 <hr>
@@ -58,7 +58,7 @@
                 <p>A really simple page that I did for my final year project. Here I dabbled with DOM manipulation and as well as if else statements to differentiate the various outputs possible from the BMI calculated. Just a really simple page, but I had a lot of fun with implementing it.</p>
                 <a href="https://woolalal.github.io/bmicalculator/" target="_blank"><button class="livewebsite-btn">Website</button></a>
                 <a href="https://github.com/woolalal/bmicalculator" target="_blank"><button class="github-btn">Github</button></a>  
-            </div>
+            </div> -->
             <div class="col-lg-6 col-md-6 project-container">
                 <h5>Weather API</h5>
                 <img src="images/weatherapp.png" alt="weather-img" class="weather-img">
@@ -95,7 +95,7 @@
             <ul>
                 <li>HTML5, CSS3, Bootstrap, Javascript, Node, ExpressJS, PHP, Java</li>
                 <li>Javascript library such as ReactJs, VueJS</li>
-                <li>Working with database such as MySQL</li>
+                <li>Working with database such as MySQL, MongoDB</li>
                 <li>Networking and troubleshooting skills</li>
                 <li>English and basic Chinese</li>
             </ul>
@@ -122,7 +122,7 @@
             <span>|</span>
             <a href="mailto:cedricwookw06@gmail.com">EMAIL</a>
         </div>
-        <p>© 2021 Cedric Woo</p>
+        <p>© 2022 Cedric Woo</p>
     </section>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
